--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,11 +41,11 @@ dependencies {
 
     def glide_version = '4.11.0'
     def lifecycle_version = '2.2.0'
-    def fragment_version = '1.2.5'
     def activity_version = '1.1.0'
     def okhttp_version = '4.9.0'
     def retrofit_version = '2.9.0'
     def serializationjson_version = '1.0.1'
+    def swiperefreshlayout_version = '1.1.0'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -55,8 +55,6 @@ dependencies {
 
     //Activity
     implementation "androidx.activity:activity-ktx:$activity_version"
-//    //Fragment
-//    implementation "androidx.fragment:fragment-ktx:$fragment_version"
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     // LiveData
@@ -75,7 +73,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation 'com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0'
 
-
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:$swiperefreshlayout_version"
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
