--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
 
     def glide_version = '4.11.0'
     def lifecycle_version = '2.2.0'
-    def activity_version = '1.1.0'
+    def fragment_version = '1.2.5'
     def okhttp_version = '4.9.0'
     def retrofit_version = '2.9.0'
     def serializationjson_version = '1.0.1'
@@ -53,8 +53,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
-    //Activity
-    implementation "androidx.activity:activity-ktx:$activity_version"
+    //Fragment
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     // LiveData
